--- a/App3/App3.vcxproj.filters
+++ b/App3/App3.vcxproj.filters
@@ -43,7 +43,10 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="App3Main.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="RenderObject.cpp" />
+    <ClCompile Include="MeshData.cpp" />
+    <ClCompile Include="Object.cpp" />
+    <ClCompile Include="GameResources.cpp" />
+    <ClCompile Include="FrameResource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -51,7 +54,10 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="ShaderStructures.h" />
     <ClInclude Include="MathHelper.h" />
-    <ClInclude Include="RenderObject.h" />
+    <ClInclude Include="MeshData.h" />
+    <ClInclude Include="GameResources.h" />
+    <ClInclude Include="Object.h" />
+    <ClInclude Include="FrameResource.h" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest" />
