--- a/App3/App3.vcxproj.filters
+++ b/App3/App3.vcxproj.filters
@@ -47,6 +47,7 @@
     <ClCompile Include="GameResources.cpp" />
     <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="GameMain.cpp" />
+    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -59,6 +60,7 @@
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="EngineSettings.h" />
     <ClInclude Include="GameMain.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest" />
