--- a/App3/App3.vcxproj
+++ b/App3/App3.vcxproj
@@ -231,6 +231,9 @@
     </AppxManifest>
     <None Include="App3_TemporaryKey.pfx" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Assets\Models\skull.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VSINSTALLDIR)\Common7\IDE\Extensions\Microsoft\VsGraphics\ImageContentTask.targets" />
