--- a/App3/App3.vcxproj.filters
+++ b/App3/App3.vcxproj.filters
@@ -38,6 +38,9 @@
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
       <Filter>Assets</Filter>
     </Image>
+    <Filter Include="Assets\Models">
+      <UniqueIdentifier>{b89b95e6-b6a4-42f7-ac19-384da7f4e7a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
@@ -67,5 +70,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App3_TemporaryKey.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Assets\Models\skull.txt">
+      <Filter>Assets\Models</Filter>
+    </Text>
   </ItemGroup>
 </Project>
