--- a/App3/App3.vcxproj
+++ b/App3/App3.vcxproj
@@ -197,24 +197,27 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Common\d3dx12.h" />
+    <ClInclude Include="Common\DDSTextureLoader.h" />
     <ClInclude Include="EngineSettings.h" />
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="Common\DirectXHelper.h" />
     <ClInclude Include="FrameResource.h" />
-    <ClInclude Include="GameResources.h" />
+    <ClInclude Include="GameResource.h" />
     <ClInclude Include="MaterialData.h" />
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="MeshData.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ShaderStructures.h" />
+    <ClInclude Include="TextureData.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Common\DDSTextureLoader.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="FrameResource.cpp" />
-    <ClCompile Include="GameResources.cpp" />
+    <ClCompile Include="GameResource.cpp" />
     <ClCompile Include="MeshData.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
