--- a/App3/App3.vcxproj
+++ b/App3/App3.vcxproj
@@ -207,6 +207,10 @@
     <ClInclude Include="Common\DirectXHelper.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="GameResource.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="LightDirectional.h" />
+    <ClInclude Include="LightPoint.h" />
+    <ClInclude Include="LightSpot.h" />
     <ClInclude Include="MaterialData.h" />
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="MeshData.h" />
@@ -222,6 +226,10 @@
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="GameResource.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="LightDirectional.cpp" />
+    <ClCompile Include="LightPoint.cpp" />
+    <ClCompile Include="LightSpot.cpp" />
     <ClCompile Include="MeshData.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
