--- a/App3/App3.vcxproj.filters
+++ b/App3/App3.vcxproj.filters
@@ -59,7 +59,8 @@
     <ClCompile Include="LightSpot.cpp" />
     <ClCompile Include="LightDirectional.cpp" />
     <ClCompile Include="FloatingLightPoint.cpp" />
-    <ClCompile Include="FliterBlur.cpp" />
+    <ClCompile Include="FilterSobel.cpp" />
+    <ClCompile Include="FilterBlur.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -85,6 +86,7 @@
     <ClInclude Include="FloatingLightPoint.h" />
     <ClInclude Include="BillboardData.h" />
     <ClInclude Include="FilterBlur.h" />
+    <ClInclude Include="FilterSobel.h" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest" />
